# flashcards

./: .gitignore  .gitmodules  .nix-gcroot  Cargo.toml  Makefile  Shuttle.toml  build.rs  deploy.sh  flake.nix  flashcards.json  package-lock.json  package.json  postcss.config.js  shell.nix  shuttle_prebuild.sh  tailwind.config.ts  taplo.toml
crates/flashcards_render/: Cargo.toml
crates/flashcards_render/src/: deserialize.rs  lib.rs  loader.rs  render.rs
crates/flashcards_render/src/render/: tex.rs
crates/flashcards_render_cli/: Cargo.toml
crates/flashcards_render_cli/src/: main.rs
crates/flashcards_server/: Cargo.toml  build.rs  package.json  postcss.config.js  tailwind.config.ts
crates/flashcards_server/src/: main.rs  serve.rs
crates/flashcards_server/src/serve/: response.rs  search.rs
crates/flashcards_server/templates/: base.html  index.html  macros.html  main.ts  page.html  search.html  study.html  style.css  view.html
dep-installer-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-installer-hack/src/: main.rs
migrations/: 20251229105154_cards_and_topics.sql
src/: collection.rs  init.ts  main.rs  render.rs  serve.rs  style.css
src/collection/: deserialize.rs
src/render/: tex.rs
src/serve/: auth.rs  response.rs  search.rs  study.rs  topic_list.rs
templates/: flashcard.html  login.html  page.html  search.html  study.html  study_flashcard.html  topic_list.html  view.html
