[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]
exclude = ["dep-installer-hack"]

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
itertools = "0.13"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22"
sublime_fuzzy = "0.7"
shuttle-runtime = "0.45"
askama = { version = "0.12", features = ["mime", "mime_guess"] }
router = { git = "https://github.com/AlanRandon/CLI-Apps" }

pulldown-cmark-escape = "0.11"
katex = "0.4"
pulldown-cmark = "0.11"
indexmap = "2.2"

hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
http-serde = "2.0"
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
hyper-staticfile = "0.10"
serde_urlencoded = "0.7"

# tectonic breaks on new icu
tectonic = "0.15"
tectonic_xetex_layout = "*"

[patch.crates-io]
tectonic = { git = "https://github.com/uncomfyhalomacro/tectonic", branch = "20240528-fix-build-for-xetex-layout" }
