[workspace]
members = [
	"crates/flashcards_render",
	"crates/flashcards_render_cli",
	"crates/flashcards_server",
]
resolver = "3"

[workspace.dependencies]
itertools = "0.14"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
tectonic = { version = "0.15", features = ["external-harfbuzz"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4"
toml = "0.9"
log = "0.4"
