[package]
name = "flashcards_render_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
thiserror.workspace = true
toml.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true
flashcards_render = { path = "../flashcards_render" }
rayon = "1.11"
pretty_env_logger = "0.5"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
tokio-rayon = "2.1.0"
