[package]
name = "flashcards_server"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
sqlx.workspace = true
rand = "0.9"
sublime_fuzzy = "0.7"
askama = { version = "0.15" }
router = { git = "https://github.com/AlanRandon/CLI-Apps" }

hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
http-serde = "2.0"
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
hyper-staticfile = "0.10"
serde_urlencoded = "0.7"

anyhow = "1.0"
