[package]
name = "flashcards_server"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
sqlx.workspace = true
anyhow = "1.0"
rand = "0.9"
askama = "0.15"
poem = "3.1"
rust-embed = { version = "8.9", features = [
	"poem-ex",
	"interpolate-folder-path",
] }
mime_guess = "2.0"
hex = "0.4"
